# MathMagic

./: CMakeLists.txt
modules/MathApplication/: CMakeLists.txt
modules/MathApplication/src/: main.cpp
modules/MathLib/: CMakeLists.txt
modules/MathLib/include/: MathFunctions.h
modules/MathLib/src/: MathFunctions.cpp
modules/TestSolution/: CMakeLists.txt
modules/TestSolution/src/: test.cpp
scripts/: clean.cmd  cmakegen-vc12_x86.cmd
